Revert "Issue #3405277 by scott_euser, anybody: Add vertical-align: top as default for table cells"
This reverts commit a3941f583e4b9ae274413317113528497e3f3101.

--- a/core/themes/claro/css/components/tables.css
+++ b/core/themes/claro/css/components/tables.css
@@ -30,7 +30,6 @@ th {
   height: var(--space-xl);
   padding: var(--space-xs) var(--space-m);
   text-align: start;
-  vertical-align: top;
   color: var(--color-text);
   background: var(--color-gray-050);
   line-height: 1.25rem; /* 20px */
@@ -163,7 +162,6 @@ td {
   height: 4rem;
   padding: var(--space-xs) var(--space-m);
   text-align: start;
-  vertical-align: top;
 }
 
 td .item-list ul {
